# image_search_engine

./: .gitignore  README.md  docker-compose.yml
api/: main_API.py
backend/: Dockerfile  environment.yml  main_API.py  main_BACK.py  pyproject.toml  utils.py
backend/data/: chroma.sqlite3
container-data/database/: init.sql
